# aiTinkerCloud

./: CMakeLists.txt  README.md  flash_prog_cfg.ini  main.c  proj.conf
aiTinkerCloud_SDK/: CMakeLists.txt
aiTinkerCloud_SDK/application/: aiio_ble_config_wifi.c  aiio_ble_config_wifi.h  aiio_cloud_control.c  aiio_cloud_control.h  aiio_cloud_receive.c  aiio_cloud_receive.h  aiio_cloud_rtc.c  aiio_cloud_rtc.h  aiio_common.c  aiio_common.h  config.h
aiTinkerCloud_SDK/driver/: aiio_gpio.c  aiio_gpio.h  aiio_wifi.c  aiio_wifi.h
aiTinkerCloud_SDK/protocol/: aiio_ble_config.c  aiio_ble_config.h  aiio_ble_protocol.c  aiio_ble_protocol.h  aiio_mqtt_service.c  aiio_mqtt_service.h  aiio_protocol_code.h  aiio_protocol_comm.h  aiio_protocol_packet.c  aiio_protocol_packet.h  aiio_protocol_parse.c  aiio_protocol_parse.h  aiio_wan_service.c  aiio_wan_service.h
aiTinkerCloud_SDK/system/: aiio_chip_spec.h  aiio_os_port.c  aiio_os_port.h  aiio_system.h
aiTinkerCloud_SDK/utils/: aiio_cJSON.c  aiio_cJSON.h  aiio_crclib.h  aiio_ctime.c  aiio_ctime.h  aiio_log.c  aiio_log.h  aiio_rtc_timer.c  aiio_rtc_timer.h  elog_port.c
src/Config/: aiio_dev_config.h  lwipopts_user.h
src/cloud/: aipi_cloud.c  aipi_cloud.h
src/device/: aipi_device.c  aipi_device.h
src/relays/: relays_dev.c  relays_dev.h
